--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/web3": "^1.2.2",
     "apollo-server-express": "^3.13.0",
+    "bignumber.js": "^9.1.2",
     "dotenv": "^16.3.1",
     "firebase-admin": "^11.11.1",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "web3": "^4.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
