--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "generate": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@nestjs/apollo": "^12.0.11",
@@ -30,6 +30,7 @@
     "apollo-server-express": "^3.13.0",
     "bignumber.js": "^9.1.2",
     "dotenv": "^16.3.1",
+    "ethers": "^6.9.0",
     "firebase-admin": "^11.11.1",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.0",
